--- a/Flipkart_Laptop_Scraping.ipynb
+++ b/Flipkart_Laptop_Scraping.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "uClient = reg(url)\n",
     "html_page = uClient.read()\n",
@@ -31,7 +23,6 @@
     "page_soup = soup(html_page,\"html.parser\")\n",
     "containers = page_soup.findAll(\"div\" , {\"class\",\"_2kSfQ4\"})\n",
     "number_of_laptops = len(containers)\n",
-    "print(number_of_laptops)\n",
     "i = 0 \n",
     "DataSet = []\n",
     "while(i<number_of_laptops):\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +92,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MSI GS Core i7 8th Gen - (16 GB/512 GB SSD/Win...</td>\n",
-       "      <td>₹77,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,69,990</td>\n",
-       "      <td>16% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -125,9 +116,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Asus ROG Strix Edition Core i7 7th Gen - (16 G...</td>\n",
-       "      <td>₹1,34,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,39,990</td>\n",
-       "      <td>11% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -165,18 +156,18 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Acer Predator Helios 300 Core i7 8th Gen - (8 ...</td>\n",
-       "      <td>₹1,19,649</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,27,999</td>\n",
-       "      <td>35% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Acer Predator 15 Core i7 7th Gen - (16 GB/1 TB...</td>\n",
-       "      <td>₹1,19,649</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,59,703</td>\n",
-       "      <td>35% off</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -197,9 +188,9 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>MSI GL Core i7 7th Gen - (8 GB/1 TB HDD/DOS/2 ...</td>\n",
-       "      <td>₹79,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹79,257</td>\n",
-       "      <td>11% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>3.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -221,25 +212,25 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>MSI Stealth Core i7 8th Gen - (16 GB/512 GB SS...</td>\n",
-       "      <td>₹1,24,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹2,09,990</td>\n",
-       "      <td>24% off</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>MSI Raider Core i7 8th Gen - (16 GB/1 TB HDD/5...</td>\n",
-       "      <td>₹1,24,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,94,990</td>\n",
-       "      <td>24% off</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Dell Inspiron Core i7 7th Gen - (16 GB/1 TB HD...</td>\n",
-       "      <td>₹1,24,990</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹1,04,697</td>\n",
-       "      <td>24% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -263,31 +254,31 @@
        "      <td>Dell 5000 Core i7 7th Gen - (8 GB/1 TB HDD/128...</td>\n",
        "      <td>₹87,000</td>\n",
        "      <td>₹86,990</td>\n",
-       "      <td>24% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Dell G3 15 3000 Series Core i5 8th Gen - (8 GB...</td>\n",
-       "      <td>₹87,000</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹80,742</td>\n",
-       "      <td>24% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Dell Inspiron 7000 Core i5 6th Gen - (8 GB/1 T...</td>\n",
-       "      <td>₹87,000</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹88,768</td>\n",
-       "      <td>24% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Asus TUF Series Core i7 8th Gen - (8 GB/1 TB H...</td>\n",
-       "      <td>₹87,000</td>\n",
+       "      <td>None</td>\n",
        "      <td>₹89,990</td>\n",
-       "      <td>24% off</td>\n",
+       "      <td>None</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -328,7 +319,7 @@
        "      <td>₹89,990</td>\n",
        "      <td>₹85,990</td>\n",
        "      <td>4% off</td>\n",
-       "      <td>4.6</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,30 +328,30 @@
       "text/plain": [
        "                                                 Name Original_price  \\\n",
        "0   Asus TUF Core i5 8th Gen - (8 GB/1 TB HDD/128 ...        ₹77,990   \n",
-       "1   MSI GS Core i7 8th Gen - (16 GB/512 GB SSD/Win...        ₹77,990   \n",
+       "1   MSI GS Core i7 8th Gen - (16 GB/512 GB SSD/Win...           None   \n",
        "2   Asus FX553 Core i7 7th Gen - (8 GB/1 TB HDD/Wi...        ₹80,990   \n",
        "3   MSI GP Core i7 8th Gen - (16 GB/1 TB HDD/256 G...      ₹1,34,990   \n",
-       "4   Asus ROG Strix Edition Core i7 7th Gen - (16 G...      ₹1,34,990   \n",
+       "4   Asus ROG Strix Edition Core i7 7th Gen - (16 G...           None   \n",
        "5   Asus TUF Core i5 8th Gen - (8 GB/1 TB HDD/Wind...        ₹74,990   \n",
        "6   Acer Predator Helios 300 Core i5 8th Gen - (8 ...        ₹94,799   \n",
        "7   Acer Nitro 5 Core i7 7th Gen - (8 GB/1 TB HDD/...        ₹78,990   \n",
        "8   Acer Predator Helios 300 Core i7 8th Gen - (8 ...      ₹1,19,649   \n",
-       "9   Acer Predator Helios 300 Core i7 8th Gen - (8 ...      ₹1,19,649   \n",
-       "10  Acer Predator 15 Core i7 7th Gen - (16 GB/1 TB...      ₹1,19,649   \n",
+       "9   Acer Predator Helios 300 Core i7 8th Gen - (8 ...           None   \n",
+       "10  Acer Predator 15 Core i7 7th Gen - (16 GB/1 TB...           None   \n",
        "11  Acer Nitro 5 Core i5 7th Gen - (8 GB/1 TB HDD/...        ₹68,990   \n",
        "12  MSI GV Series Core i7 7th Gen - (8 GB/1 TB HDD...        ₹79,990   \n",
-       "13  MSI GL Core i7 7th Gen - (8 GB/1 TB HDD/DOS/2 ...        ₹79,990   \n",
+       "13  MSI GL Core i7 7th Gen - (8 GB/1 TB HDD/DOS/2 ...           None   \n",
        "14  MSI GV Series Core i7 7th Gen - (8 GB/1 TB HDD...      ₹1,04,990   \n",
        "15  MSI GV Series Core i7 8th Gen - (16 GB/1 TB HD...      ₹1,24,990   \n",
-       "16  MSI Stealth Core i7 8th Gen - (16 GB/512 GB SS...      ₹1,24,990   \n",
-       "17  MSI Raider Core i7 8th Gen - (16 GB/1 TB HDD/5...      ₹1,24,990   \n",
-       "18  Dell Inspiron Core i7 7th Gen - (16 GB/1 TB HD...      ₹1,24,990   \n",
+       "16  MSI Stealth Core i7 8th Gen - (16 GB/512 GB SS...           None   \n",
+       "17  MSI Raider Core i7 8th Gen - (16 GB/1 TB HDD/5...           None   \n",
+       "18  Dell Inspiron Core i7 7th Gen - (16 GB/1 TB HD...           None   \n",
        "19  Dell 5000 Core i5 7th Gen - (8 GB/1 TB HDD/Win...        ₹80,990   \n",
        "20  Dell Inspiron Core i7 6th Gen - (8 GB/1 TB HDD...      ₹1,15,000   \n",
        "21  Dell 5000 Core i7 7th Gen - (8 GB/1 TB HDD/128...        ₹87,000   \n",
-       "22  Dell G3 15 3000 Series Core i5 8th Gen - (8 GB...        ₹87,000   \n",
-       "23  Dell Inspiron 7000 Core i5 6th Gen - (8 GB/1 T...        ₹87,000   \n",
-       "24  Asus TUF Series Core i7 8th Gen - (8 GB/1 TB H...        ₹87,000   \n",
+       "22  Dell G3 15 3000 Series Core i5 8th Gen - (8 GB...           None   \n",
+       "23  Dell Inspiron 7000 Core i5 6th Gen - (8 GB/1 T...           None   \n",
+       "24  Asus TUF Series Core i7 8th Gen - (8 GB/1 TB H...           None   \n",
        "25  Asus ROG Core i7 6th Gen - (8 GB/1 TB HDD/Wind...        ₹84,990   \n",
        "26  Asus ROG Strix Scar II Core i7 8th Gen - (16 G...      ₹1,67,990   \n",
        "27  Asus ROG Strix Core i7 8th Gen - (16 GB/1 TB H...      ₹1,25,990   \n",
@@ -369,38 +360,38 @@
        "\n",
        "   Current_price Discount Rating  \n",
        "0        ₹64,990  16% off    4.5  \n",
-       "1      ₹1,69,990  16% off    4.2  \n",
+       "1      ₹1,69,990     None    4.2  \n",
        "2        ₹70,990  12% off    4.4  \n",
        "3      ₹1,19,990  11% off    4.4  \n",
-       "4      ₹1,39,990  11% off      5  \n",
+       "4      ₹1,39,990     None      5  \n",
        "5        ₹61,990  17% off    4.4  \n",
        "6        ₹66,990  29% off    4.2  \n",
        "7        ₹69,990  11% off    4.3  \n",
        "8        ₹76,990  35% off    4.7  \n",
-       "9      ₹1,27,999  35% off    4.5  \n",
-       "10     ₹1,59,703  35% off    4.5  \n",
+       "9      ₹1,27,999     None    4.5  \n",
+       "10     ₹1,59,703     None   None  \n",
        "11       ₹62,990   8% off    4.5  \n",
        "12       ₹70,990  11% off    4.6  \n",
-       "13       ₹79,257  11% off    3.7  \n",
+       "13       ₹79,257     None    3.7  \n",
        "14       ₹99,999   4% off    4.6  \n",
        "15       ₹94,990  24% off    4.5  \n",
-       "16     ₹2,09,990  24% off    4.5  \n",
-       "17     ₹1,94,990  24% off    4.5  \n",
-       "18     ₹1,04,697  24% off    4.5  \n",
+       "16     ₹2,09,990     None   None  \n",
+       "17     ₹1,94,990     None   None  \n",
+       "18     ₹1,04,697     None    4.5  \n",
        "19       ₹72,990   9% off    4.4  \n",
        "20       ₹86,990  24% off    3.8  \n",
-       "21       ₹86,990  24% off    4.4  \n",
-       "22       ₹80,742  24% off      4  \n",
-       "23       ₹88,768  24% off      3  \n",
-       "24       ₹89,990  24% off      4  \n",
+       "21       ₹86,990     None    4.4  \n",
+       "22       ₹80,742     None      4  \n",
+       "23       ₹88,768     None      3  \n",
+       "24       ₹89,990     None      4  \n",
        "25       ₹79,990   5% off    4.4  \n",
        "26     ₹1,49,990  10% off    4.9  \n",
        "27       ₹83,990  33% off    4.7  \n",
        "28       ₹74,000   7% off    4.6  \n",
-       "29       ₹85,990   4% off    4.6  "
+       "29       ₹85,990   4% off   None  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
